hphp/hack/test/typecheck/class_meth5.php.exp
ERROR: File "class_meth5.php", line 20, characters 10-18:
Too many positional arguments (expected 0 but got 1) (Typing[4105])
  File "class_meth5.php", line 13, characters 26-27:
  Definition is here
ERROR: File "class_meth5.php", line 25, characters 10-18:
Too many positional arguments (expected 0 but got 1) (Typing[4105])
  File "class_meth5.php", line 13, characters 26-27:
  Definition is here
